Cleans up responsive typography markup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div id="heading" class="col-sm-12">
+            <div id="heading" class="col-lg-12">
                 <span id="design" class="d-block display-4 font-weight-light font-italic text-white support-heading">design</span>
                 <span id="code" class="d-block display-4 font-weight-light font-italic  text-white support-heading">code</span>
                 <span id="devops" class="d-block display-4 font-weight-light font-italic  text-white support-heading">devops</span>
