Adds some work on portfolio content area

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div id="heading" class="col-lg-12">
+        <header class="jumbotron">
+            <div id="big-text" class="col-lg-12">
                 <span id="design" class="d-block display-4 font-weight-light font-italic text-white support-heading">design</span>
                 <span id="code" class="d-block display-4 font-weight-light font-italic  text-white support-heading">code</span>
                 <span id="devops" class="d-block display-4 font-weight-light font-italic  text-white support-heading">devops</span>
-                <span id="site-title" class="display-1 font-weight-bold text-white main-heading">jamesc.work</span>
+                <span id="identity" class="d-block display-1 font-weight-bold text-white main-heading">jamesc.work</span>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-            </div>
+
+        </header>
+        <div class="row pt-5">
+            <div class="col-lg-4 mx-auto border-bottom border-left rounded-bottom rounded-left content-box"></div>
+            <div class="col-lg-4 mx-auto border-bottom border-left rounded-bottom rounded-left content-box"></div>
+            <div class="col-lg-4 mx-auto border-bottom border-left rounded-bottom rounded-left content-box"></div>
         </div>
     </div> <!-- End container -->
 </body>
